--- a/airbnb_london_data_analysis.ipynb
+++ b/airbnb_london_data_analysis.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "airbnb_london_data_analysis.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMMD/qvjvXdfQpeo4by3e4n"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,7 +25,7 @@
         "\n",
         "This notebook has the data analysis of the Airbnb's dataset for the city of London, UK.\n",
         "\n",
-        "[Airbnb](https://www.airbnb.co.uk/) is one of the largest companies for renting accomodations and share experiences in the wolrd. It offers over 7 million places to stay. The platform connects the hosts and travellers through a solid service based on reviews, verified profiles, trusted service and customer support.\n",
+        "[Airbnb](https://www.airbnb.co.uk/) is one of the largest companies for renting accomodations and share experiences in the world. It offers over 7 million places to stay. The platform connects the hosts and travellers through a solid service based on reviews, verified profiles, trusted service and customer support.\n",
         "\n",
         "[Inside Airbnb](http://insideairbnb.com/get-the-data.html) is a initiative to provide hosting data from many cities around the globe. The site's database is a nice source for data science projects."
       ]
@@ -53,7 +54,7 @@
         "import matplotlib.pyplot as plt;\n",
         "import seaborn as sns;"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +69,7 @@
         "\n",
         "df = pd.read_csv(\"http://data.insideairbnb.com/united-kingdom/england/london/2020-05-10/visualisations/listings.csv\")"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +79,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##**ETL**"
+        "##**EDA**"
       ]
     },
     {
@@ -119,7 +120,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +307,7 @@
         "print(f'Inputs: {df.shape[0]}')\n",
         "print(f'Variables {df.shape[1]}')"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +372,7 @@
         "\n",
         "display(df.dtypes)"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -429,7 +430,7 @@
         "df['last_review'] = pd.to_datetime(df['last_review'])\n",
         "display(df.dtypes)"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -486,7 +487,7 @@
       "source": [
         "(df.isnull().sum() / df.shape[0]).sort_values(ascending = False)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -542,7 +543,7 @@
         "\n",
         "df = df.drop(columns=['neighbourhood_group'])"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -561,7 +562,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -738,7 +739,7 @@
         "df = df.dropna(axis=0, subset=['name'])\n",
         "df = df.dropna(axis=0, subset=['host_name'])"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -755,7 +756,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,7 +938,7 @@
         "\n",
         "df.hist(bins=15, figsize=(15,15));"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -995,7 +996,7 @@
         "    'reviews_per_month']].describe()\n",
         "  "
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1176,7 +1177,7 @@
         "print(f\"{len(df[df.price > 750])} entries\")\n",
         "print(\"{:.4f}%\".format((len(df[df.price > 750]) / df.shape[0])*100))"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1238,7 +1239,7 @@
         "print(f\"{len(df[df.minimum_nights > 30])} entries\")\n",
         "print(\"{:.4f}%\".format((len(df[df.minimum_nights > 30]) / df.shape[0])*100))"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1314,7 +1315,7 @@
         "#plot adjusted histograms \n",
         "df_clean.hist(bins=15, figsize=(15,15));"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1388,7 +1389,7 @@
         "                        'availability_365']].corr()\n",
         "display(cor_mat)"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1514,7 +1515,7 @@
         "sns.heatmap(data=cor_mat, cmap='RdBu', fmt='.2f', square=True, \n",
         "            linewidths=0.1, linecolor='white', annot=True, annot_kws={\"size\":10});"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1576,7 +1577,7 @@
         "\n",
         "df_clean.room_type.value_counts()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1612,7 +1613,7 @@
         "\n",
         "df_clean.room_type.value_counts() / df_clean.shape[0]"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1678,7 +1679,7 @@
         "\n",
         "print('£{:.2f}'.format(df_clean.price.mean()))"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1705,7 +1706,7 @@
         "\n",
         "df_clean.groupby(['neighbourhood']).price.mean().sort_values(ascending=False)"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1793,7 +1794,7 @@
         "numb_neig = numb_neig.sort_values(ascending=False)\n",
         "print(numb_neig)"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1886,7 +1887,7 @@
         "              c=df_clean['price'], s=8, cmap=plt.get_cmap('jet'), \n",
         "              figsize=(12,8));"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
